force-app/main/default/objects/Site_Visit__c/fields/OCR__c.field-meta.xml
<CustomField>
    <fullName>OCR__c</fullName>
    <label>OCR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>