force-app/main/default/objects/Site_Visit__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office Location</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>