force-app/main/default/objects/Site_Visit__c/fields/Opportunity_Sub_stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_stage__c</fullName>
    <label>Opportunity Sub-stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Did not like layout of the flat</fullName>
            </value>
            <value>
                <fullName>Location Mismatch</fullName>
            </value>
            <value>
                <fullName>Booked in other project</fullName>
            </value>
            <value>
                <fullName>Booked in resale</fullName>
            </value>
            <value>
                <fullName>Plan to buy home is Postponed / cancelled</fullName>
            </value>
            <value>
                <fullName>Not Answering. Pre-sales to follow-up</fullName>
            </value>
            <value>
                <fullName>Not Vastu compliant</fullName>
            </value>
            <value>
                <fullName>Budget does not match</fullName>
            </value>
            <value>
                <fullName>Area/Configuration Mismatch</fullName>
            </value>
            <value>
                <fullName>Possession does not match</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Loan Issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Choice of Unit</fullName>
            </value>
            <value>
                <fullName>Conditional sale</fullName>
            </value>
            <value>
                <fullName>Commercial Property Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>