force-app/main/default/objects/Site_Visit__c/fields/Opportunity_Sub_stage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_stage_Reason__c</fullName>
    <label>Opportunity Sub-stage Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Sub_stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Good Expected Closure</fullName>
            </value>
            <value>
                <fullName>All Good Expected Revisit Planned</fullName>
            </value>
            <value>
                <fullName>All Good Revisit Planned but Date Not Confirmed</fullName>
            </value>
            <value>
                <fullName>Expected Revisit with Family/Relatives/Friend etc.Project liked</fullName>
            </value>
            <value>
                <fullName>Will check finances / Loan Eligibility. To call again</fullName>
            </value>
            <value>
                <fullName>Project liked. But no commitment. To follow-up</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Will get back if interested</fullName>
            </value>
            <value>
                <fullName>Looking at other options</fullName>
            </value>
            <value>
                <fullName>Looking for Smaller configuration/area</fullName>
            </value>
            <value>
                <fullName>Looking for bigger configuration/area</fullName>
            </value>
            <value>
                <fullName>Looking for RTMI</fullName>
            </value>
            <value>
                <fullName>Looking for early possession</fullName>
            </value>
            <value>
                <fullName>Sale of existing property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>