force-app/main/default/objects/Site_Visit__c/fields/Others_Reason__c.field-meta.xml
<CustomField>
    <fullName>Others_Reason__c</fullName>
    <label>Others&apos; Reason</label>
    <type>TextArea</type>
</CustomField>