force-app/main/default/objects/Site_Visit__c/fields/Pincode_1__c.field-meta.xml
<CustomField>
    <fullName>Pincode_1__c</fullName>
    <label>Pincode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>