force-app/main/default/objects/Site_Visit__c/fields/Possession_Timeframe_Required__c.field-meta.xml
<CustomField>
    <fullName>Possession_Timeframe_Required__c</fullName>
    <label>Possession Timeframe Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Possession_Timeframe</valueSetName>
    </valueSet>
</CustomField>