force-app/main/default/objects/Site_Visit__c/fields/Pricing_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Discussion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Discussion</label>
    <type>Checkbox</type>
</CustomField>