force-app/main/default/objects/Site_Visit__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Site Visit</relationshipLabel>
    <relationshipName>Site_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>