force-app/main/default/objects/Site_Visit__c/fields/Proposed_Re_visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Re_Visit_Date__c</fullName>
    <label>Proposed Re-Visit Date</label>
    <type>DateTime</type>
</CustomField>