force-app/main/default/objects/Site_Visit__c/fields/Proposed_Revisit_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Revisit_Date__c</fullName>
    <label>Proposed Revisit Date</label>
    <type>DateTime</type>
</CustomField>