force-app/main/default/objects/Site_Visit__c/fields/Re_Assign_Sales_TL__c.field-meta.xml
<CustomField>
    <fullName>Re_Assign_Sales_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Re-Assign Sales TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>