force-app/main/default/objects/Site_Visit__c/fields/Re_Assignment_Sales_TL_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Assignment_Sales_TL_Date__c</fullName>
    <label>Re-Assignment Sales TL Date</label>
    <type>DateTime</type>
</CustomField>