force-app/main/default/objects/Site_Visit__c/fields/Sales_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Assignment_Date__c</fullName>
    <label>Sales Assignment Date</label>
    <type>DateTime</type>
</CustomField>