force-app/main/default/objects/Site_Visit__c/fields/Sales_Kit_Provided__c.field-meta.xml
<CustomField>
    <fullName>Sales_Kit_Provided__c</fullName>
    <label>Sales Kit Provided?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>