force-app/main/default/objects/Site_Visit__c/fields/Sales_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Name__c</fullName>
    <formula>Sales_Manager__r.FirstName + &apos; &apos; + Sales_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager Name</label>
    <type>Text</type>
</CustomField>