force-app/main/default/objects/Site_Visit__c/fields/Sample_Flat__c.field-meta.xml
<CustomField>
    <fullName>Sample_Flat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Flat</label>
    <type>Checkbox</type>
</CustomField>