force-app/main/default/objects/Site_Visit__c/fields/Show_Flat__c.field-meta.xml
<CustomField>
    <fullName>Show_Flat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Flat</label>
    <type>Checkbox</type>
</CustomField>