force-app/main/default/objects/Site_Visit__c/fields/Show_Sample_Apartment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Show_Sample_Apartment_Comments__c</fullName>
    <label>Show / Sample Apartment Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>