force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Approver__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Approver for the Site Visit. This field is auto-filled with the Site Head name from the project when the Source Conflict is checked.</description>
    <inlineHelpText>The Approver for the Site Visit. This field is auto-filled with the Site Head name from the project when the Source Conflict is checked.</inlineHelpText>
    <label>Site Visit Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visit4</relationshipName>
    <type>Lookup</type>
</CustomField>