force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Attended_By__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Attended_By__c</fullName>
    <label>Site Visit Attended By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Snehal Jadhav</fullName>
            </value>
            <value>
                <fullName>Mitesh Patil</fullName>
            </value>
            <value>
                <fullName>Antariksh Kumawat</fullName>
            </value>
            <value>
                <fullName>Rahul</fullName>
            </value>
            <value>
                <fullName>Riya Khanvilkar</fullName>
            </value>
            <value>
                <fullName>Umaid Shiakh</fullName>
            </value>
            <value>
                <fullName>Priyanshu Pandey</fullName>
            </value>
            <value>
                <fullName>Ratan Swami</fullName>
            </value>
            <value>
                <fullName>Anant Nakkash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>