force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Date__c</fullName>
    <label>Site Visit Date</label>
    <type>DateTime</type>
</CustomField>