force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Done__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Done__c</fullName>
    <label>Site Visit Done ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>