force-app/main/default/objects/Site_Visit__c/fields/SM_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Assignment_Date__c</fullName>
    <label>SM Assignment Date</label>
    <type>DateTime</type>
</CustomField>