force-app/main/default/objects/Site_Visit__c/fields/Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Source_Description__c</fullName>
    <label>Source Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>