force-app/main/default/objects/Site_Visit__c/fields/Source_of_Finance__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Finance__c</fullName>
    <label>Source of Finance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Sale of Property</fullName>
            </value>
            <value>
                <fullName>Own Contribution</fullName>
            </value>
            <value>
                <fullName>All of Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>