force-app/main/default/objects/Site_Visit__c/fields/Source_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funding__c</fullName>
    <label>Source of Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Funding</fullName>
            </value>
            <value>
                <fullName>Sale of Property</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Total Down Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>