force-app/main/default/objects/Site_Visit__c/fields/Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Site Visit (Sourcing Manager)</relationshipLabel>
    <relationshipName>Site_Visit1</relationshipName>
    <type>Lookup</type>
</CustomField>