force-app/main/default/objects/Site_Visit__c/fields/State_1__c.field-meta.xml
<CustomField>
    <fullName>State_1__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>