force-app/main/default/objects/Site_Visit__c/fields/SV_Completed__c.field-meta.xml
<CustomField>
    <fullName>SV_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SV Completed</label>
    <type>Checkbox</type>
</CustomField>