force-app/main/default/objects/Site_Visit__c/fields/SV_completion_Date__c.field-meta.xml
<CustomField>
    <fullName>SV_completion_Date__c</fullName>
    <label>SV completion Date</label>
    <type>DateTime</type>
</CustomField>