force-app/main/default/objects/Site_Visit__c/fields/Unit_Plan_Brochure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Plan_Brochure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Plan/Brochure</label>
    <type>Checkbox</type>
</CustomField>