force-app/main/default/objects/Site_Visit__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KDMC</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Western Suburbs</fullName>
            </value>
            <value>
                <fullName>Central Suburbs</fullName>
            </value>
            <value>
                <fullName>Navi Mumbai</fullName>
            </value>
            <value>
                <fullName>SoBo</fullName>
            </value>
            <value>
                <fullName>Far Eastern</fullName>
            </value>
            <value>
                <fullName>Far Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>