force-app/main/default/objects/Site_Visit__c/validationRules/CP_and_CP_Project_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_and_CP_Project_Mandatory</fullName>
    <active>false</active>
    <description>If source is CP then CP Name and CP Project should be mandatory.</description>
    <errorConditionFormula>AND(OR(ISBLANK( CP_Project__c ),ISBLANK( Channel_Partner__c)), ISPICKVAL( Lead_Source__c  , &apos;Channel Partner&apos; ))</errorConditionFormula>
    <errorMessage>Please add Channel Partner and CP Project</errorMessage>
</ValidationRule>