force-app/main/default/objects/Site_Visit__c/validationRules/Next_Follow_Up_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Follow_Up_Date_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    OR(
        ISPICKVAL(PRIORVALUE(Opportunity_Stage__c), &quot;In Follow-up&quot;), 
        ISPICKVAL(Opportunity_Stage__c, &quot;In Follow-up&quot;)
    ),
    ISBLANK(Next_Follow_up_Date__c),
    False
)</errorConditionFormula>
    <errorDisplayField>Next_Follow_up_Date__c</errorDisplayField>
    <errorMessage>Please Provide Next Follow Up Date</errorMessage>
</ValidationRule>