force-app/main/default/objects/Site_Visit__c/validationRules/Next_Follow_up_Date_within_10_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Follow_up_Date_within_10_Days</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Opportunity_Stage__c , &quot;In Follow-up&quot;),
    OR(
        ISPICKVAL(Sub_Stage__c , &quot;Hot&quot;),
        ISPICKVAL(Sub_Stage__c , &quot;Warm&quot;),
        ISPICKVAL(Sub_Stage__c , &quot;Cold&quot;)
    ),
    
        NOT(ISBLANK(Next_Follow_up_Date__c))
    ,
    Next_Follow_up_Date__c &gt; (NOW() + 10)
)</errorConditionFormula>
    <errorDisplayField>Next_Follow_up_Date__c</errorDisplayField>
    <errorMessage>Please Provide Next Follow up Date Within 10 Days</errorMessage>
</ValidationRule>