force-app/main/default/objects/Site_Visit__c/validationRules/Opportunity_Stage_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Stage_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Others_Reason__c ), OR (ISPICKVAL(  Sub_Stage__c  , &apos;Others&apos; ), ISPICKVAL( Sub_Stage_Reason__c  , &apos;Others&apos;)))</errorConditionFormula>
    <errorDisplayField>Others_Reason__c</errorDisplayField>
    <errorMessage>Please fill &quot;Others&apos; Reason&quot;</errorMessage>
</ValidationRule>