force-app/main/default/objects/Site_Visit__c/validationRules/Site_Visit_Attended_By_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Visit_Attended_By_is_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISBLANK(Comment__c),
NOT(ISBLANK(TEXT( Site_Visit_Attended_By__c ))), ISBLANK(TEXT( Site_Visit_Attended_By__c )) )</errorConditionFormula>
    <errorDisplayField>Site_Visit_Attended_By__c</errorDisplayField>
    <errorMessage>Site Visit Attended By Is Mandatory</errorMessage>
</ValidationRule>