force-app/main/default/objects/Site_Visit__c/validationRules/Site_Visit_Project_and_CP_Project_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Visit_Project_and_CP_Project_Same</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Project_Name__c  &lt;&gt; CP_Project__r.Project__c, ISPICKVAL( Lead_Source__c , &apos;Channel Partner&apos;) )</errorConditionFormula>
    <errorMessage>Site Visit Project and CP Project Project Should be same.</errorMessage>
</ValidationRule>