force-app/main/default/objects/Site_Visit__c/validationRules/Validation_OnNext_Followup_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_OnNext_Followup_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW() == FALSE,
ISPICKVAL(Opportunity_Stage__c, &apos;In Follow-up&apos;),
DATEVALUE(Next_Follow_up_Date__c) &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Next Follow Up Date should be Greater than or Equal to Today</errorMessage>
</ValidationRule>