force-app/main/default/objects/Site_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Project__c</columns>
    <columns>Site_Visit_Count__c</columns>
    <columns>Site_Visit_Date__c</columns>
    <columns>Is_Preregister_Visit__c</columns>
    <columns>Proposed_Re_visit_Date__c</columns>
    <columns>Is_Sales_Manager_Assigned__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>