force-app/main/default/objects/Site_Visit__c/listViews/All_Site_Visits.listView-meta.xml
<ListView>
    <fullName>All_Site_Visits</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Mobile__c</columns>
    <columns>Comment__c</columns>
    <columns>Budget__c</columns>
    <columns>Is_Sales_Manager_Assigned__c</columns>
    <columns>Configuration_Required__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Possession_Timeframe_Required__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Next_Follow_up_Date__c</columns>
    <columns>Site_Visit_Attended_By__c</columns>
    <columns>Site_Visit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Site Visits</label>
</ListView>