force-app/main/default/objects/Site_Visit__c/listViews/Completed_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Completed_Site_Visits</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Is_Site_Visit_Completed__c</columns>
    <columns>Project__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Walk_In_Source__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Site_Visit_Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Completed Site Visits</label>
</ListView>